--- a/modul-8 - javascript  Dasar/penggunaan-js.html
+++ b/modul-8 - javascript  Dasar/penggunaan-js.html
@@ -7,11 +7,12 @@
     <!-- <script> type="text/javascript"
        alert("Hello Selamat Pagi !");
     </script> -->
+    <script src="latihan1.js"></script>
 </head>
 <body>
     <h1>Hello Guys 🐱‍🏍</h1>
-    <script> type="text/javascript"
+    <!-- <script> type="text/javascript"
         alert("Hello Selamat Pagi dari Evan !");
-     </script>
+     </script> -->
 </body>
 </html>
