--- a/modul-8 - javascript  Dasar/fungsi.html
+++ b/modul-8 - javascript  Dasar/fungsi.html
@@ -6,6 +6,6 @@
     <title>Fungsi JS</title>
 </head>
 <body>
-    <script> src="fungsi.js"</script>
+    <script src="fungsi.js"></script>
 </body>
 </html>
